--- a/bargain_radar_project/templates/radar/index.html
+++ b/bargain_radar_project/templates/radar/index.html
@@ -17,7 +17,7 @@
 							<li data-target="#slider-carousel" data-slide-to="2"></li>
 						</ol>
 						
-						<div class="carousel-inner">
+						<div class="carousel-inner"">
 							<div class="item active">
 								<div class="col-sm-6">
 									<h1><span>Bargain</span>-Radar</h1>
@@ -39,7 +39,7 @@
 									<button type="button" class="btn btn-default get">Get it now</button>
 								</div>
 								<div class="col-sm-6">
-                                    <img src="{% static 'offer_images/lab715.jpg' %}" class="girl img-responsive" alt="" />
+                                    <img src="{% static 'offer_images/lab715.jpg' %}" alt="" />
 									<h3>{{ offer2.name}}</h3>
                                     {{ offer2.description}}
 									<p><b>Price: {{ offer2.price}}</b></p>
