--- a/bargain_radar_project/templates/radar/login.html
+++ b/bargain_radar_project/templates/radar/login.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 
-{% block title_block %}Login {% endblock %}
+{% block title_block %}Account {% endblock %}
 
 {% block body_block %}
 	
