--- a/bargain_radar_project/templates/base.html
+++ b/bargain_radar_project/templates/base.html
@@ -37,10 +37,10 @@
 						<div class="contactinfo">
 							<ul class="nav nav-pills">
 								<li><a href="mailto:vkulazhenkov@gmail.com">Ivan <i class="fa fa-envelope"></i>vkulazhenkov@gmail.com</a>
-                                <a href="mailto:2026929Z@student.gla.ac.uk">Ivaylo <i class="fa fa-envelope"></i>2026929Z@student.gla.ac.uk</a>
-                                <a href="mailto:2096507S@student.gla.ac.uk">Majd <i class="fa fa-envelope"></i>	2096507S@student.gla.ac.uk</a>
+                                <a href="mailto:2026929Z@student.gla.ac.uk">Ivaylo <i class="fa fa-envelope"></i>2026929Z@student.gla.ac.uk</a></li>
+                                <li><a href="mailto:2096507S@student.gla.ac.uk">Majd <i class="fa fa-envelope"></i>2096507S@student.gla.ac.uk</a>
                                 <a href="mailto:2089488S@student.gla.ac.uk">Mariusz <i class="fa fa-envelope"></i>2089488S@student.gla.ac.uk</a></li>
-                                <li><a href="#"><br /><br /><br /><i class="fa fa-phone"></i> +44 7777 123 456</a></li>
+                                <li><a href="#"><i class="fa fa-phone"></i> +44 7777 123 456</a></li>
 							</ul>
 						</div>
 					</div>
@@ -64,7 +64,7 @@
 				<div class="row">
 					<div class="col-sm-4">
 						<div class="logo pull-left">
-							<a href="{% url 'index' %}"><img src="{% static 'Eshopper/images/home/logo.png' %}" alt="" /></a>
+							<a href="{% url 'index' %}"><img src="{% static 'Eshopper/images/home/logo2.png' %}" alt="" /></a>
 						</div>
 						<div class="btn-group pull-right">
 							<div class="btn-group">
@@ -144,6 +144,7 @@
 										<li><a href="{% url 'single_blog' %}">Blog Single</a></li>
                                     </ul>
                                 </li>
+                                <li><a href="{% url 'error' %}">404</a></li>
 								<li><a href="{% url 'contact' %}">Contact</a></li>
 							</ul>
 						</div>
