--- a/bargain_radar_project/templates/radar/404.html
+++ b/bargain_radar_project/templates/radar/404.html
@@ -30,7 +30,7 @@
 <body>
 	<div class="container text-center">
 		<div class="logo-404">
-			<a href="index.html"><img src="{% static 'Eshopper/images/home/logo.png' %}" alt="" /></a>
+			<a href="{% url 'index' %}"><img src="{% static 'Eshopper/images/home/logo.png' %}" alt="" /></a>
 		</div>
 		<div class="content-404">
 			<img src="{% static 'Eshopper/images/404/404.png' %}" class="img-responsive" alt="" />
