project completed. no bug found. works as expected

--- a/bargain_radar_project/templates/radar/contact-us.html
+++ b/bargain_radar_project/templates/radar/contact-us.html
@@ -43,12 +43,12 @@
 	    			<div class="contact-info">
 	    				<h2 class="title text-center">Contact Info</h2>
 	    				<address>
-	    					<p>E-Shopper Inc.</p>
-							<p>935 W. Webster Ave New Streets Chicago, IL 60614, NY</p>
-							<p>Newyork USA</p>
-							<p>Mobile: +2346 17 38 93</p>
-							<p>Fax: 1-714-252-0026</p>
-							<p>Email: info@e-shopper.com</p>
+	    					<p>Digital Traders</p>
+							<p>Computing Science</p>
+							<p>WAD2</p>
+							<p>Y2</p>
+							<p>Uniwersity of Glasgow</p>
+							<p>UK/Earth/Milky Way</p>
 	    				</address>
 	    				<div class="social-networks">
 	    					<h2 class="title text-center">Social Networking</h2>
