--- a/bargain_radar_project/templates/radar/login.html
+++ b/bargain_radar_project/templates/radar/login.html
@@ -24,6 +24,7 @@
 								Keep me signed in
 							</span>
 							<button type="submit" class="btn btn-default">Login</button>
+                            <p style="color: red" ><br />{{ message }} </p>
 						</form>
 					</div><!--/login form-->
 				</div>
