--- a/bargain_radar_project/templates/radar/client_offers.html
+++ b/bargain_radar_project/templates/radar/client_offers.html
@@ -24,7 +24,7 @@
 
 							<tr>
 								<td class="cart_product">
-									<img width = '200' height = '200' src="{% static item.picture.name %}">
+									<img width = '200' height = '200' src="{{ item.picture.url }}">
 								</td>
 								<td class="cart_description">
 									<h4><a href="">{{item.name}}</a></h4>
